Fixed bug with overflow on webpages and no image due to changes in product pages and image-list layout.

--- a/layouts/default/global.css
+++ b/layouts/default/global.css
@@ -1107,6 +1107,7 @@ span.exhibitors-description {
 #content .share-buttons-wrap {
 	text-align: left;
 	display: block;
+    margin-bottom: 0.5em;
 }
 
 #content article.page form {
